fix: CRUD company