@@ -1,98 +1,70 @@
 package com.TopCV.service.impl;
 
-import com.TopCV.entity.Company;
 import com.TopCV.dto.request.CompanyCreationRequest;
 import com.TopCV.dto.request.CompanyUpdateRequest;
 import com.TopCV.dto.response.CompanyResponse;
+import com.TopCV.entity.Company;
+import com.TopCV.exception.AppException;
+import com.TopCV.exception.ErrorCode;
+import com.TopCV.mapper.CompanyMapper;
 import com.TopCV.repository.CompanyRepository;
 import com.TopCV.service.CompanyService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class CompanyServiceImpl implements CompanyService {
 
-    @Autowired
-    private CompanyRepository companyRepository;
+    CompanyRepository companyRepository;
+    CompanyMapper companyMapper;
 
     @Override
+    @Transactional
     public CompanyResponse createCompany(CompanyCreationRequest request) {
         if (companyRepository.existsByName(request.getName())) {
-            throw new RuntimeException("Company name already exists: " + request.getName());
+            throw new AppException(ErrorCode.COMPANY_NAME_EXISTS);
         }
-
-        Company company = new Company();
-        company.setName(request.getName());
-        company.setDescription(request.getDescription());
-        company.setLogo(request.getLogo());
-        company.setWebsite(request.getWebsite());
-        company.setEmployeeRange(request.getEmployeeRange());
-        company.setFollowerCount(request.getFollowerCount());
-        company.setAddress(request.getAddress());
-
-        company.setCategory(null);
-        company.setUser(null);
-
+        Company company = companyMapper.toEntity(request);
         Company savedCompany = companyRepository.save(company);
-        return convertToCompanyResponse(savedCompany);
+        return companyMapper.toResponse(savedCompany);
     }
 
     @Override
     public List<CompanyResponse> getAllCompanies() {
         return companyRepository.findAll().stream()
-                .map(this::convertToCompanyResponse)
-                .collect(Collectors.toList());
+                .map(companyMapper::toResponse)
+                .toList();
     }
 
     @Override
     public Optional<CompanyResponse> getCompanyById(Integer id) {
         return companyRepository.findById(id)
-                .map(this::convertToCompanyResponse);
+                .map(companyMapper::toResponse);
     }
 
     @Override
+    @Transactional
     public CompanyResponse updateCompany(Integer id, CompanyUpdateRequest request) {
-        Optional<Company> existingCompanyOptional = companyRepository.findById(id);
-        if (existingCompanyOptional.isEmpty()) {
-            throw new RuntimeException("Company not found with id: " + id);
-        }
-
-        Company existingCompany = existingCompanyOptional.get();
-
-        if (request.getName() != null) {
-            existingCompany.setName(request.getName());
-        }
-        if (request.getDescription() != null) {
-            existingCompany.setDescription(request.getDescription());
-        }
-        if (request.getLogo() != null) {
-            existingCompany.setLogo(request.getLogo());
-        }
-        if (request.getWebsite() != null) {
-            existingCompany.setWebsite(request.getWebsite());
-        }
-        if (request.getEmployeeRange() != null) {
-            existingCompany.setEmployeeRange(request.getEmployeeRange());
-        }
-        if (request.getFollowerCount() != null) {
-            existingCompany.setFollowerCount(request.getFollowerCount());
-        }
-        if (request.getAddress() != null) {
-            existingCompany.setAddress(request.getAddress());
-        }
-
-        Company updatedCompany = companyRepository.save(existingCompany);
-        return convertToCompanyResponse(updatedCompany);
+        Company company = companyRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.COMPANY_NOT_FOUND));
+        companyMapper.updateEntity(company, request);
+        Company updatedCompany = companyRepository.save(company);
+        return companyMapper.toResponse(updatedCompany);
     }
 
     @Override
+    @Transactional
     public void deleteCompany(Integer id) {
         if (!companyRepository.existsById(id)) {
-            throw new RuntimeException("Company not found with id: " + id);
+            throw new AppException(ErrorCode.COMPANY_NOT_FOUND);
         }
         companyRepository.deleteById(id);
     }
@@ -100,18 +72,5 @@ public class CompanyServiceImpl implements CompanyService {
     @Override
     public boolean isCompanyNameExists(String name) {
         return companyRepository.existsByName(name);
-    }
-
-    private CompanyResponse convertToCompanyResponse(Company company) {
-        return CompanyResponse.builder()
-                .id(company.getId())
-                .name(company.getName())
-                .description(company.getDescription())
-                .logo(company.getLogo())
-                .website(company.getWebsite())
-                .employeeRange(company.getEmployeeRange())
-                .followerCount(company.getFollowerCount())
-                .address(company.getAddress())
-                .build();
     }
 }
